--- a/04_Data Selection & Filtering.ipynb
+++ b/04_Data Selection & Filtering.ipynb
@@ -9,19 +9,12 @@
     "\n",
     "Selecting the right rows and columns is *the first step* in analyzing any dataset. Pandas gives you several powerful ways to do this.\n",
     "\n",
-    "\n",
-    "\n",
-    "## Summary\n",
-    "\n",
-    "- Use `df[col]`, `.loc[]`, `.iloc[]`, `.at[]`, `.iat[]` to access data  \n",
-    "- Filter with logical conditions or `.query()` for readable code  \n",
-    "- Mastering selection makes the rest of pandas feel easy\n",
     " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 1,
    "id": "221ff4d7-1298-4e6f-9d17-eb70729c237a",
    "metadata": {},
    "outputs": [],
@@ -31,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 2,
    "id": "c700e03e-c73e-4a8a-8353-c87b4644d874",
    "metadata": {},
    "outputs": [],
@@ -41,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 3,
    "id": "6efb6e5a-ea32-4db1-bf59-d3a1c3c23b70",
    "metadata": {},
    "outputs": [
@@ -217,7 +210,7 @@
        "11                   342   8.2  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 4,
    "id": "d407c86b-a124-47bf-9e77-1e6b0dd065e8",
    "metadata": {},
    "outputs": [
@@ -267,7 +260,7 @@
        "Name: Actor, dtype: object"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 5,
    "id": "82682ddd-5d84-4a2c-97ac-a869b77fa729",
    "metadata": {},
    "outputs": [
@@ -288,7 +281,7 @@
        "'Ranbir Kapoor'"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 6,
    "id": "f2beff65-0e07-4fe9-8480-e66e79eacfaf",
    "metadata": {},
    "outputs": [
@@ -409,7 +402,7 @@
        "11       Vicky Kaushal   8.2"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 7,
    "id": "24c0f86a-d935-4b49-9b39-2a7da68499c5",
    "metadata": {},
    "outputs": [
@@ -451,7 +444,7 @@
        "Name: 1, dtype: object"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 8,
    "id": "154f449a-a33b-4f7b-82d8-4469bcf43418",
    "metadata": {},
    "outputs": [
@@ -478,7 +471,7 @@
        "Name: 1, dtype: object"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 9,
    "id": "8a80aeee-e339-49f2-8258-83fe49311985",
    "metadata": {},
    "outputs": [
@@ -520,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 10,
    "id": "d0379128-636e-46fc-a217-d5404fbf1add",
    "metadata": {},
    "outputs": [
@@ -553,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 11,
    "id": "30a75f30-ccd6-4bfa-a5fb-d06d0c685b17",
    "metadata": {},
    "outputs": [
@@ -613,7 +606,7 @@
        "2      Aamir Khan   8.4           Dangal"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 12,
    "id": "fa73476b-dbf2-4f3e-8bd5-6bc070d524af",
    "metadata": {},
    "outputs": [
@@ -674,7 +667,7 @@
        "1     Salman Khan  Tiger Zinda Hai"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 13,
    "id": "8a548b9b-04a0-4e25-a024-7ff70e3cebd2",
    "metadata": {},
    "outputs": [
@@ -710,7 +703,7 @@
        "'Shah Rukh Khan'"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 14,
    "id": "ec427f1d-3ea3-47f2-bfe9-369003797d16",
    "metadata": {},
    "outputs": [
@@ -731,7 +724,7 @@
        "'Shah Rukh Khan'"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 15,
    "id": "06c671b1-96ab-4c7c-8ea2-3ee857daa669",
    "metadata": {},
    "outputs": [
@@ -855,7 +848,7 @@
        "11                   342   8.2  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 16,
    "id": "04e21b11-e904-40ee-aec4-ad93927f978f",
    "metadata": {},
    "outputs": [
@@ -881,7 +874,7 @@
        "Name: Actor, dtype: object"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 17,
    "id": "87d8470e-5966-4532-acd6-ddfc0ca8fd8b",
    "metadata": {},
    "outputs": [
@@ -999,7 +992,7 @@
        "11                   342   8.2  "
       ]
      },
-     "execution_count": 123,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 18,
    "id": "2dc774c9-6782-402e-a1bd-9d8f196527c4",
    "metadata": {},
    "outputs": [
@@ -1175,7 +1168,7 @@
        "11                   342   8.2  "
       ]
      },
-     "execution_count": 124,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1186,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 19,
    "id": "f2e911b8-052a-4abb-932c-d9ef7e62c4a2",
    "metadata": {},
    "outputs": [
@@ -1274,7 +1267,7 @@
        "11                   342   8.2  "
       ]
      },
-     "execution_count": 125,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 20,
    "id": "56c80a60-e6f5-44bf-b80b-b894144524d3",
    "metadata": {},
    "outputs": [
@@ -1417,7 +1410,7 @@
        "11                   342   8.2  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1553,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 21,
    "id": "2949b66c-e259-4a0d-95c8-63cd401a7e6f",
    "metadata": {},
    "outputs": [
@@ -1729,7 +1722,7 @@
        "11                   342   8.2  "
       ]
      },
-     "execution_count": 127,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1740,7 +1733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 22,
    "id": "99755458-8ac3-40e9-ad40-75077712e950",
    "metadata": {},
    "outputs": [],
@@ -1750,7 +1743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 23,
    "id": "c510a982-bab7-4076-84ba-5eae4aef3036",
    "metadata": {},
    "outputs": [
@@ -1860,7 +1853,7 @@
        "11       Vicky Kaushal   8.2"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1871,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 24,
    "id": "d756e549-7bb3-4c8e-89e3-b526c8d9ac0d",
    "metadata": {},
    "outputs": [],
@@ -1881,7 +1874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 25,
    "id": "268d5581-347e-4f93-b7a5-51b3cf83c1ed",
    "metadata": {},
    "outputs": [
@@ -1991,7 +1984,7 @@
        "11       Vicky Kaushal   8.2"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2002,7 +1995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 26,
    "id": "5d5d203b-98fe-4536-8b32-92fc87e93a02",
    "metadata": {},
    "outputs": [
@@ -2178,7 +2171,7 @@
        "11                   342   8.2  "
       ]
      },
-     "execution_count": 141,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2188,9 +2181,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5450e325-05d8-4552-9f27-1ff6db590bf7",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "- Use `df[col]`, `.loc[]`, `.iloc[]`, `.at[]`, `.iat[]` to access data  \n",
+    "- Filter with logical conditions or `.query()` for readable code  \n",
+    "- Mastering selection makes the rest of pandas feel easy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62bd2cc7-34f1-4a2f-bc18-832bf19758dd",
+   "id": "c63af2ba-017a-4139-921c-922d1466087d",
    "metadata": {},
    "outputs": [],
    "source": []
